Added support for the ZDA sentence.